--- a/00.간단한 노트북 사용 법.ipynb
+++ b/00.간단한 노트북 사용 법.ipynb
@@ -34,7 +34,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6529058e",
+   "id": "bbe1359b",
    "metadata": {},
    "source": [
     "![Python.svg](attachment:Python.svg)"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bafe3c9",
+   "id": "1b26dfac",
    "metadata": {},
    "source": [
     "#| Header 1 | Header 2 | Header 3 |\n",
@@ -58,7 +58,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8afd723",
+   "id": "2632dfd1",
+   "metadata": {},
+   "source": [
+    "| Header 1 | Header 2 | Header 3 |\n",
+    "|----------|----------|----------|\n",
+    "| Row 1 Col 1 | Row 1 Col 2 | Row 1 Col 3 |\n",
+    "| Row 2 Col 1 | Row 2 Col 2 | Row 2 Col 3 |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb0bfb58",
+   "metadata": {},
+   "source": [
+    "- 첫 번째 항목\n",
+    "- 두 번째 항목\n",
+    "  - 두 번째 항목의 하위 항목\n",
+    "- 세 번째 항목\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66de95ba",
    "metadata": {},
    "source": [
     "# Heading 1\n",
@@ -71,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9fadd2d",
+   "id": "74b210e6",
    "metadata": {},
    "source": [
     "| Header 1 | Header 2 | Header 3 |\n",
