--- a/02. Series 와 DataFrame.ipynb
+++ b/02. Series 와 DataFrame.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "89106aae",
+   "id": "1abf4101",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8a5d90ee",
+   "id": "03339c76",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "63bcbebd",
+   "id": "82d2d895",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e74e23f5",
+   "id": "f82f4a78",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6962c6e1",
+   "id": "91ba6efa",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7e50b283",
+   "id": "e81387b5",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "83909b0b",
+   "id": "85ed0c6f",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6580cef9",
+   "id": "eec71c5a",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7c9dae6a",
+   "id": "a1457cd8",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "364ce58b",
+   "id": "1a1be34f",
    "metadata": {},
    "outputs": [
     {
@@ -334,6 +334,471 @@
     "# 시리즈와 시리즈의 연산\n",
     "s3 = pd.Series([1, 2, 3, 4, 5, 6, 7])\n",
     "s2 + s3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b382d599",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>KOR</th>\n",
+       "      <th>ENG</th>\n",
+       "      <th>MATH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>홍길동</th>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>김철수</th>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>이영희</th>\n",
+       "      <td>75</td>\n",
+       "      <td>70</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     KOR  ENG  MATH\n",
+       "홍길동   80   90    80\n",
+       "김철수   90   80    90\n",
+       "이영희   75   70    85"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DataFrame\n",
+    "# 각 컬럼 데이터가 Series로 구성된 2차원 테이블 데이터\n",
+    "\n",
+    "# 데이터 프레임 생성\n",
+    "# 각 컬럼을 시리즈로 가지고 있는 딕셔너리를 부여하여 데이터프레임을 생성\n",
+    "\n",
+    "scores_df = pd.DataFrame({\n",
+    "    \"KOR\": [80, 90, 75],\n",
+    "    \"ENG\": [90, 80, 70],\n",
+    "    \"MATH\":[80, 90, 85]\n",
+    "}, index=[\"홍길동\", \"김철수\", \"이영희\"])\n",
+    "scores_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "14bd80a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['홍길동', '김철수', '이영희'], dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 혹시 나중에 index 부여하고자 할때\n",
+    "scores_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "707000d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KOR     90\n",
+      "ENG     80\n",
+      "MATH    90\n",
+      "Name: 김철수, dtype: int64\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loc를 이용한 관측치의 확인\n",
+    "print(scores_df.loc['김철수'])\n",
+    "print(type(scores_df.loc['김철수']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "feaa4985",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>KOR</th>\n",
+       "      <th>ENG</th>\n",
+       "      <th>MATH</th>\n",
+       "      <th>TOTAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>홍길동</th>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>김철수</th>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>이영희</th>\n",
+       "      <td>75</td>\n",
+       "      <td>70</td>\n",
+       "      <td>85</td>\n",
+       "      <td>230</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     KOR  ENG  MATH  TOTAL\n",
+       "홍길동   80   90    80    250\n",
+       "김철수   90   80    90    260\n",
+       "이영희   75   70    85    230"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 파생 변수의 추가 TOTAL 생성하기\n",
+    "scores_df['TOTAL']= scores_df['KOR'] + scores_df['ENG'] + scores_df['MATH']\n",
+    "scores_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "72fda137",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>KOR</th>\n",
+       "      <th>ENG</th>\n",
+       "      <th>MATH</th>\n",
+       "      <th>TOTAL</th>\n",
+       "      <th>AVERAGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>홍길동</th>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "      <td>250</td>\n",
+       "      <td>83.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>김철수</th>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>260</td>\n",
+       "      <td>86.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>이영희</th>\n",
+       "      <td>75</td>\n",
+       "      <td>70</td>\n",
+       "      <td>85</td>\n",
+       "      <td>230</td>\n",
+       "      <td>76.666667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     KOR  ENG  MATH  TOTAL    AVERAGE\n",
+       "홍길동   80   90    80    250  83.333333\n",
+       "김철수   90   80    90    260  86.666667\n",
+       "이영희   75   70    85    230  76.666667"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_df['AVERAGE'] = scores_df['TOTAL'] / 3 # 시리즈와 스칼라의연산 -> 브로드캐스팅\n",
+    "scores_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2c594e33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     KOR  ENG  MATH  TOTAL    AVERAGE\n",
+      "홍길동   80   90    80    250  83.333333\n",
+      "김철수   90   80    90    260  86.666667\n",
+      "이영희   75   70    85    230  76.666667\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "홍길동     True\n",
+       "김철수     True\n",
+       "이영희    False\n",
+       "Name: AVERAGE, dtype: bool"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# boolean 불린 추출\n",
+    "# AVERAGE 점수가 83점 이상이 사람만 filtering\n",
+    "print(scores_df)\n",
+    "scores_df['AVERAGE'] > 80 #80점 초과의 비교연산 수행\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b0ece7cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>KOR</th>\n",
+       "      <th>ENG</th>\n",
+       "      <th>MATH</th>\n",
+       "      <th>TOTAL</th>\n",
+       "      <th>AVERAGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>홍길동</th>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "      <td>250</td>\n",
+       "      <td>83.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>김철수</th>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>260</td>\n",
+       "      <td>86.666667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     KOR  ENG  MATH  TOTAL    AVERAGE\n",
+       "홍길동   80   90    80    250  83.333333\n",
+       "김철수   90   80    90    260  86.666667"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_df[[True, True, False]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5fe6e6be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>KOR</th>\n",
+       "      <th>ENG</th>\n",
+       "      <th>MATH</th>\n",
+       "      <th>TOTAL</th>\n",
+       "      <th>AVERAGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>홍길동</th>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "      <td>250</td>\n",
+       "      <td>83.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>김철수</th>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "      <td>90</td>\n",
+       "      <td>260</td>\n",
+       "      <td>86.666667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     KOR  ENG  MATH  TOTAL    AVERAGE\n",
+       "홍길동   80   90    80    250  83.333333\n",
+       "김철수   90   80    90    260  86.666667"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 불린 추출 \n",
+    "# scores_df에서 AVERAGE가 80점 초과 데이터들만 추출하고 싶을 경우\n",
+    "filtered_df = scores_df[scores_df['AVERAGE'] > 80] #80점 초과의 비교연산 수행\n",
+    "filtered_df\n"
    ]
   }
  ],
