--- a/03.Data Visualizaton with Pandas.ipynb
+++ b/03.Data Visualizaton with Pandas.ipynb
@@ -882,7 +882,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1ba66bd4130>]"
+       "[<matplotlib.lines.Line2D at 0x244a7bb0130>]"
       ]
      },
      "execution_count": 10,
@@ -915,7 +915,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1ba6748a0e0>]"
+       "[<matplotlib.lines.Line2D at 0x244a847e0e0>]"
       ]
      },
      "execution_count": 11,
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "2c802390",
    "metadata": {},
    "outputs": [
@@ -2467,7 +2467,7 @@
        "carb -0.569607  0.057534  0.274073  1.000000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
