--- a/datascience-workbooks/numpy/numpy_basics-02-넘파이_배열.ipynb
+++ b/datascience-workbooks/numpy/numpy_basics-02-넘파이_배열.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "id": "30e4b68667aa90e7",
    "metadata": {
     "ExecuteTime": {
@@ -30,6 +30,7 @@
      "text": [
       "[1, 2, 3, 4, 5] <class 'list'>\n",
       "(1, 2, 3, 4, 5) <class 'tuple'>\n",
+      "\n",
       "[1 2 3 4 5] <class 'numpy.ndarray'>\n",
       "[1 2 3 4 5] <class 'numpy.ndarray'>\n"
      ]
@@ -41,13 +42,16 @@
     "# 파이썬 기본 리스트\n",
     "lst1 = [1, 2, 3, 4, 5]   \n",
     "print(lst1, type(lst1))\n",
+    "\n",
     "# 파이썬 튜플\n",
     "tpl = 1, 2, 3, 4, 5    \n",
     "print(tpl, type(tpl))\n",
+    "print()\n",
     "\n",
     "# 리스트를 이용한 넘파이 배열 생성\n",
     "arr1 = np.array([1, 2, 3, 4, 5])    \n",
     "print(arr1, type(arr1))\n",
+    "\n",
     "# 튜플을 이용한 넘파이 배열 생성\n",
     "arr2 = np.array((1, 2, 3, 4, 5))    \n",
     "print(arr2, type(arr2))"
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 105,
    "id": "33fd523dfad930ac",
    "metadata": {
     "ExecuteTime": {
@@ -78,8 +82,10 @@
      "text": [
       "range(0, 10)\n",
       "[0 1 2 3 4 5 6 7 8 9]\n",
+      "\n",
       "range(2, 10)\n",
       "[2 3 4 5 6 7 8 9]\n",
+      "\n",
       "range(0, 10, 2)\n",
       "[0 2 4 6 8]\n"
      ]
@@ -93,12 +99,14 @@
     "print(lst)\n",
     "arr = np.arange(10)\n",
     "print(arr)\n",
+    "print()\n",
     "\n",
     "# 2부터 10 이전까지\n",
     "lst2 = range(2, 10) \n",
     "print(lst2)\n",
     "arr2 = np.arange(2, 10)\n",
     "print(arr2)\n",
+    "print()\n",
     "\n",
     "# 0부터 10 이전까지 2간격으로\n",
     "lst3 = range(0, 10, 2)  \n",
@@ -117,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "id": "b0f8ddf20704eb1e",
    "metadata": {
     "ExecuteTime": {
@@ -134,10 +142,27 @@
       "[[0. 0. 0.]\n",
       " [0. 0. 0.]\n",
       " [0. 0. 0.]]\n",
+      "\n",
       "[1. 1. 1.]\n",
       "[[1. 1. 1.]\n",
       " [1. 1. 1.]\n",
-      " [1. 1. 1.]]\n"
+      " [1. 1. 1.]]\n",
+      "\n",
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n",
+      "\n",
+      "[[3 3 3]\n",
+      " [3 3 3]\n",
+      " [3 3 3]]\n"
      ]
     }
    ],
@@ -145,16 +170,27 @@
     "import numpy as np\n",
     "\n",
     "# 영행렬\n",
-    "zeros3 = np.zeros(3) # 3개짜리 1차원 배열 (0으로 채워진)\n",
+    "zeros3 = np.zeros(3)  # 3개의 요소가 모두 0인 1차원 배열 \n",
     "print(zeros3)\n",
-    "zeros3x3 = np.zeros((3, 3)) # 3*3 1차원 배열 (\") \n",
+    "zeros3x3 = np.zeros((3, 3)) # 3x3 형태의 모든 요소가 0인 2차원 배열\n",
     "print(zeros3x3)\n",
+    "print()\n",
     "\n",
     "# 모든 원소가 1인 행렬\n",
-    "ones3 = np.ones(3) # 3개짜리 1차원 배열 (1로 채워진)\n",
+    "ones3 = np.ones(3) # 3개의 요소가 모두 1인 1차원 배열\n",
     "print(ones3)\n",
-    "ones3x3 = np.ones((3, 3)) # (\")\n",
-    "print(ones3x3)"
+    "ones3x3 = np.ones((3, 3)) # 3x3 형태의 모든 요소가 1인 2차원 배열\n",
+    "print(ones3x3)\n",
+    "print()\n",
+    "\n",
+    "# 3차원 배열\n",
+    "ones3x3x3 = np.ones((3, 3, 3))  # 3x3x3 형태의 모든 요소가 1인 3차원 배열\n",
+    "print(ones3x3x3)\n",
+    "print()\n",
+    "\n",
+    "# 모든 원소가 3인 행렬\n",
+    "three3x3 = np.full((3, 3), 3)  # 3x3 형태의 모든 요소가 3인 2차원 배열\n",
+    "print(three3x3)"
    ]
   },
   {
@@ -168,76 +204,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "edf8e4954fcde405",
+   "execution_count": 103,
+   "id": "b0ffbf88",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-29T07:39:12.126432Z",
      "start_time": "2024-01-29T07:39:12.047630800Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3x3 단위행렬: [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "\n",
+      "[[0. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]]\n",
+      "[[0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 0. 0.]]\n",
+      "[[0. 0. 1.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "# 단위항렬 : eye\n",
     "eye = np.eye(3) #   3x3의 행렬에서 주대각선상의 원소가 모두 1인 행렬\n",
     "print(\"3x3 단위행렬:\", eye)\n",
+    "print()\n",
     "\n",
-    "eye2 = np.eye(3, k=-1)  # k: 주 대각선을 위, 아래로 얼마나 이동시킬 것인지 결정\n",
-    "print(eye2)\n"
+    "eye2 = np.eye(3, k= -1)  # k: 주 대각선을 위, 아래로 얼마나 이동시킬 것인지 결정\n",
+    "print(eye2)\n",
+    "\n",
+    "eye2 = np.eye(3, k= 1)  # k: 주 대각선을 위, 아래로 얼마나 이동시킬 것인지 결정\n",
+    "print(eye2)\n",
+    "\n",
+    "eye2 = np.eye(3, k= 2)  # k: 주 대각선을 위, 아래로 얼마나 이동시킬 것인지 결정\n",
+    "print(eye2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "637d61fbd613d9b3",
+   "id": "74fe1c53",
    "metadata": {},
    "source": [
     "- 난수를 이용한 배열 생성\n",
-    "    - 균일분포 난수 배열 생성 : rand()\n",
-    "    - 정규분포 난수 배열 생성 : randn()\n",
-    "    - 정수형 난수 생성 : randint()"
+    "\n",
+    "    - 균일분포 난수 배열 생성 : rand() : 0과 1 사이의 균일분포 난수를 생성\n",
+    "    - 정규분포 난수 배열 생성 : randn() : 평균이 0이고 표준편차가 1인 정규분포 난수를 생성\n",
+    "    - 정수형 난수 생성 : randint() : 지정된 범위 내에서 정수형 난수를 생성"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab1bb14bac87f59c",
+   "execution_count": 102,
+   "id": "53a464f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-29T07:39:12.127941300Z",
      "start_time": "2024-01-29T07:39:12.059776300Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.09767211 0.68423303 0.44015249]\n",
+      " [0.12203823 0.49517691 0.03438852]\n",
+      " [0.9093204  0.25877998 0.66252228]\n",
+      " [0.31171108 0.52006802 0.54671028]]\n",
+      "\n",
+      "[[ 0.21863832  0.88176104 -1.00908534]\n",
+      " [-1.58329421  0.77370042 -0.53814166]\n",
+      " [-1.3466781  -0.88059127 -1.1305523 ]\n",
+      " [ 0.13442888  0.58212279  0.88774846]]\n",
+      "\n",
+      "[[3 3 1]\n",
+      " [5 7 9]\n",
+      " [7 9 8]\n",
+      " [2 1 7]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "# 균일분포 난수 배열\n",
-    "uni_rand = np.random.rand(4, 3)\n",
+    "uni_rand = np.random.rand(4, 3) # 4x3 배열 생성 (랜덤)\n",
     "print(uni_rand)\n",
+    "print()\n",
+    "\n",
     "# 정규분포 난수 배열\n",
-    "norm_rand = np.random.randn(4, 3)\n",
-    "print(uni_rand)\n",
+    "norm_rand = np.random.randn(4, 3) # 4x3 배열 생성\n",
+    "print(norm_rand)\n",
+    "print()\n",
+    "\n",
     "# 정수 난수 배열\n",
-    "int_rand = np.random.randint(1, 10, size=(4, 3))\n",
+    "int_rand = np.random.randint(1, 10, size=(4, 3))  # 1부터 9까지의 정수 난수로 4x3 배열 생성\n",
     "print(int_rand)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "549a03552d050b5b",
+   "id": "aa32f0f9",
    "metadata": {},
    "source": [
     "- 확률 분포를 이용한 난수 배열 생성\n",
-    "    - 균등분포 난수 : uniform()\n",
-    "    - 정규분포 난수 : normal()\n",
-    "    - 지수분포 난수 : exponential()"
+    "    - 균등분포 난수 : uniform() : 지정된 범위 내에서 균등분포를 따르는 난수를 생성\n",
+    "    - 정규분포 난수 : normal() : 지정된 평균과 표준편차를 가지는 정규분포 난수를 생성\n",
+    "    - 지수분포 난수 : exponential() :지정된 스케일(λ)의 지수분포 난수를 생성"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "ecaf19b54de7188c",
    "metadata": {
     "ExecuteTime": {
@@ -245,33 +334,59 @@
      "start_time": "2024-01-29T07:39:12.071093700Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.75357153 4.65996971 3.99329242]\n",
+      " [1.7800932  1.7799726  1.29041806]\n",
+      " [5.33088073 4.00557506 4.54036289]\n",
+      " [1.10292247 5.84954926 5.1622132 ]]\n",
+      "\n",
+      "[[-0.58087813 -0.52516981 -0.57138017]\n",
+      " [-0.92408284 -2.61254901  0.95036968]\n",
+      " [ 0.81644508 -1.523876   -0.42804606]\n",
+      " [-0.74240684 -0.7033438  -2.13962066]]\n",
+      "\n",
+      "[[1.53793601 0.22273586 0.72202916]\n",
+      " [0.89750472 0.04756385 0.93533302]\n",
+      " [0.18696125 0.06726393 2.97368779]\n",
+      " [3.37063034 1.65233157 0.36328786]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "# 균등분포 난수\n",
-    "uni_rand = np.random.uniform(1, 6, size=(4, 3))\n",
+    "uni_rand = np.random.uniform(1, 6, size=(4, 3)) # 0과 1 사이의 균등분포 난수로 4x3 배열 생성\n",
     "print(uni_rand)\n",
+    "print()\n",
+    "\n",
     "# 정규분포 난수\n",
-    "norm_rand = np.random.normal(loc=0.0, scale=1.0, size=(4, 3))\n",
+    "norm_rand = np.random.normal(loc=0.0, scale=1.0, size=(4, 3)) # 평균 0, 표준편차 1인 정규분포 난수로 4x3 배열 생성\n",
     "print(norm_rand)\n",
+    "print()\n",
+    "\n",
     "# 지수분포 난수\n",
-    "exp_rand = np.random.exponential(scale=1., size=(4,3))\n",
+    "exp_rand = np.random.exponential(scale=1., size=(4,3))  # 스케일 1인 지수분포 난수로 4x3 배열 생성\n",
     "print(exp_rand)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "59d195e31ffea8ba",
+   "id": "6b9c2566",
    "metadata": {},
    "source": [
     "- 난수 행렬 만들 때 시드의 지정\n",
-    "    - seed()"
+    "    - seed()\n",
+    "    - 난수 생성 시 시드를 지정하면 동일한 난수 배열을 재현할 수 있다"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "cd51539e9d585ad4",
    "metadata": {
     "ExecuteTime": {
@@ -279,7 +394,16 @@
      "start_time": "2024-01-29T07:39:12.083718Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5, 2, 2, 4, 2, 2, 6, 4, 6, 6, \n",
+      "4, 4, 4, 4, 4, 4, 4, 4, 4, 4, "
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -291,7 +415,7 @@
     "    \n",
     "# seed 설정을 이용한 재현성의 확보\n",
     "for i in range(10):\n",
-    "    np.random.seed(42)\n",
+    "    np.random.seed(42) # 시드 지정\n",
     "    print(np.random.randint(1, 7), end=\", \")"
    ]
   },
@@ -305,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "bf5dade68220031c",
    "metadata": {
     "ExecuteTime": {
@@ -313,18 +437,27 @@
      "start_time": "2024-01-29T07:39:12.091267200Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<class 'int'>, <class 'float'>, <class 'bool'>, <class 'str'>]\n",
+      "['42' '3.14' 'True' 'python']\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "# 파이썬의 기본 리스트\n",
     "# lst = [42, 3.14, True, \"python\", [1, 2, 3, 4, 5]]\n",
     "lst = [42, 3.14, True, \"python\"]\n",
-    "print([type(o) for o in lst])\n",
+    "print([type(o) for o in lst]) # 각 요소의 타입 출력\n",
     "\n",
     "# 넘파이 배열\n",
     "arr = np.array(lst)\n",
-    "print(arr)"
+    "print(arr) # 모든 요소가 문자열로 변환됨"
    ]
   },
   {
@@ -342,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "4de2c9b128e3f962",
    "metadata": {
     "ExecuteTime": {
@@ -350,17 +483,36 @@
      "start_time": "2024-01-29T07:39:12.095880200Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 9 6]\n",
+      " [6 8 9]\n",
+      " [9 2 6]\n",
+      " [0 3 3]]\n",
+      "\n",
+      "형상 shape: (4, 3) (4, 3)\n",
+      "차원 ndim: 2 2\n",
+      "원소 개수 size: 12 12\n",
+      "데이터 타입 dtype: int32\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "# 0 ~ 9 사이의 난수를 가진 4행 3열 배열 생성\n",
     "arr = np.random.randint(0, 10, size=(4, 3))\n",
+    "print(arr)\n",
+    "print()\n",
+    "\n",
     "# 배열의 속성을 알아봅시다\n",
-    "print(\"형상:\", np.shape(arr), arr.shape)\n",
-    "print(\"차원:\", np.ndim(arr), arr.ndim)\n",
-    "print(\"원소 개수:\", np.size(arr), arr.size)\n",
-    "print(\"데이터 타입:\", arr.dtype)"
+    "print(\"형상 shape:\", np.shape(arr), arr.shape)\n",
+    "print(\"차원 ndim:\", np.ndim(arr), arr.ndim)\n",
+    "print(\"원소 개수 size:\", np.size(arr), arr.size)\n",
+    "print(\"데이터 타입 dtype:\", arr.dtype)"
    ]
   },
   {
@@ -374,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "558acfe4f15cb4ed",
    "metadata": {
     "ExecuteTime": {
@@ -382,7 +534,24 @@
      "start_time": "2024-01-29T07:39:12.126432Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [10 11 12 13 14]\n",
+      " [20 21 22 23 24]\n",
+      " [30 31 32 33 34]\n",
+      " [40 41 42 43 44]]\n",
+      "\n",
+      "형태 shape: (5, 5)\n",
+      "차원 ndim: 2\n",
+      "크기 size: 25\n",
+      "데이터 타입 dtype: int32\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -393,18 +562,19 @@
     "    [30, 31, 32, 33, 34],\n",
     "    [40, 41, 42, 43, 44],\n",
     "])\n",
-    "print(arr)\n",
+    "print(arr) # 5x5 배열 확인\n",
+    "print()\n",
     "\n",
     "# 이 배열에 대해 정보를 캐내 보자\n",
-    "print(\"형태:\", arr.shape)\n",
-    "print(\"차원:\", arr.ndim)\n",
-    "print(\"크기:\", arr.size)\n",
-    "print(\"데이터 타입:\", arr.dtype)"
+    "print(\"형태 shape:\", arr.shape)\n",
+    "print(\"차원 ndim:\", arr.ndim)\n",
+    "print(\"크기 size:\", arr.size)\n",
+    "print(\"데이터 타입 dtype:\", arr.dtype)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "42f23d8fce098425",
    "metadata": {
     "ExecuteTime": {
@@ -412,17 +582,36 @@
      "start_time": "2024-01-29T07:39:12.147032600Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n",
+      "\n",
+      "[20 21 22 23 24]\n",
+      "\n",
+      "[ 2 12 22 32 42]\n",
+      "\n",
+      "[[11 12 13]\n",
+      " [21 22 23]\n",
+      " [31 32 33]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 3행 2열의 데이터는 무엇인가?\n",
     "print(arr[3, 2])\n",
     "print()\n",
+    "\n",
     "# 2행 전체의 데이터를 추출해 보자\n",
     "print(arr[2])\n",
     "print()\n",
+    "\n",
     "# 2열 전체의 데이터를 추출해 보자\n",
     "print(arr[:, 2])\n",
     "print()\n",
+    "\n",
     "# 1행 1열 ~ 3행 3열의 데이터를 추출해 보자\n",
     "print(arr[1:4, 1:4])"
    ]
@@ -445,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "d9c694e6df662589",
    "metadata": {
     "ExecuteTime": {
@@ -453,7 +642,30 @@
      "start_time": "2024-01-29T07:39:12.152488300Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 4 5]\n",
+      "\n",
+      "[[ 8 10 12]\n",
+      " [11 13 15]]\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3) (4,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[118], line 24\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[0;32m     23\u001b[0m arr5 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m9\u001b[39m, \u001b[38;5;241m10\u001b[39m])  \u001b[38;5;66;03m# Error : arr3의 형태 (2, 3)와 arr5의 형태 (4,)가 브로드캐스팅에 적합하지 않음\u001b[39;00m\n\u001b[1;32m---> 24\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43marr3\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43marr5\u001b[49m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3) (4,) "
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -463,6 +675,7 @@
     "\n",
     "result = arr1 + arr2    # should be [3, 4, 5]\n",
     "print(result)\n",
+    "print()\n",
     "\n",
     "# 다차원 배열간의 브로드캐스팅\n",
     "arr3 = np.array([\n",
@@ -473,8 +686,10 @@
     "\n",
     "result = arr3 + arr4\n",
     "print(result)\n",
+    "print()\n",
     "\n",
-    "arr5 = np.array([7, 8, 9, 10])  # Error\n",
+    "\n",
+    "arr5 = np.array([7, 8, 9, 10])  # Error : arr3의 형태 (2, 3)와 arr5의 형태 (4,)가 브로드캐스팅에 적합하지 않음\n",
     "result = arr3 + arr5\n",
     "print(result)"
    ]
