0814 numpy배열연산과 함수(3)
0814 numpy배열연산과 함수(3)

--- a/datascience-workbooks/numpy/numpy_basics-03-배열_연산과_함수.ipynb
+++ b/datascience-workbooks/numpy/numpy_basics-03-배열_연산과_함수.ipynb
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49690d878a480a26",
+   "id": "e0333da7",
    "metadata": {},
    "source": [
     "### 배열의 복제\n",
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "34d113510a589d8b",
    "metadata": {
     "ExecuteTime": {
@@ -750,8 +750,10 @@
      "output_type": "stream",
      "text": [
       "origin_arr: [1 2 3 4 5]\n",
+      "\n",
       "원본: [1 2 3 4 5]\n",
       "복제: [1 2 3 4 5]\n",
+      "\n",
       "원본: [100   2   3   4   5]\n",
       "복제: [100   2   3   4   5]\n"
      ]
@@ -762,13 +764,15 @@
     "\n",
     "origin_arr = np.array([1, 2, 3, 4, 5])\n",
     "print(\"origin_arr:\", origin_arr)\n",
+    "print()\n",
     "\n",
     "# 얕은 복사\n",
     "shallow_copy = origin_arr.view()\n",
-    "\n",
+    " \n",
     "# 배열 내용 출력\n",
     "print(\"원본:\", origin_arr)\n",
     "print(\"복제:\", shallow_copy)\n",
+    "print()\n",
     "\n",
     "shallow_copy[0] = 100\n",
     "\n",
@@ -787,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "65b6b2371f237fef",
    "metadata": {
     "ExecuteTime": {
@@ -802,6 +806,7 @@
      "text": [
       "[1 2 3 4 5]\n",
       "[1 2 3 4 5]\n",
+      "\n",
       "[1 2 3 4 5]\n",
       "[100   2   3   4   5]\n"
      ]
@@ -819,6 +824,7 @@
     "# 배열 내용 출력\n",
     "print(original_array)  # [1 2 3 4 5]\n",
     "print(deep_copy)       # [1 2 3 4 5]\n",
+    "print()\n",
     "\n",
     "# 복사된 배열의 첫 번째 요소를 변경\n",
     "deep_copy[0] = 100\n",
