--- a/파이썬-평가노트북-수정본.ipynb
+++ b/파이썬-평가노트북-수정본.ipynb
@@ -12,26 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "a75403223a05951",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 여기에 함수 add()를 완성하십시오\n",
     "\n",
-    "result = add(3, 5)\n",
-    "result\n"
+    "def add(a: int, b: int) -> int:\n",
+    "    return a + b\n"
    ]
   },
   {
@@ -49,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "a0f3d6a9f7c39465",
    "metadata": {},
    "outputs": [
@@ -91,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "fe2f91649462262a",
    "metadata": {},
    "outputs": [
@@ -99,8 +88,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 은 3 입니다\n",
-      "4 는 4 입니다\n"
+      "3 은 홀수 입니다\n",
+      "4 는 짝수 입니다\n"
      ]
     }
    ],
@@ -109,7 +98,7 @@
     "    if n % 2 == 0:\n",
     "        return \"짝수\"\n",
     "    else :\n",
-    "        return None\n",
+    "        return \"홀수\"\n",
     "        \n",
     "\n",
     "\n",
@@ -137,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "330a9394e4d4333c",
    "metadata": {},
    "outputs": [
@@ -145,8 +134,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 + 4 = None\n",
-      "7 - 3 = None\n",
+      "3 + 4 = 7\n",
+      "7 - 3 = 4\n",
       "7 - 3 = None\n"
      ]
     }
@@ -154,8 +143,10 @@
    "source": [
     "from typing import Union\n",
     "def calc(a: int, b: int, func) -> Union[int, None]:\n",
-    "    # 여기에 코드를 작성하십시오\n",
-    "    pass\n",
+    "    if callable(func): # func가 호출 가능한 객체인지 확인 call able -> callable\n",
+    "        return func(a,b)\n",
+    "    else:\n",
+    "        return None\n",
     "\n",
     "    \n",
     "# 아래는 검증 코드입니다.\n",
@@ -179,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "da81c9b75d5532d5",
    "metadata": {},
    "outputs": [
@@ -187,15 +178,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 * 4 * 5 = None\n",
-      "4 * 8 * 7 * 3 * 2 = None\n"
+      "3 * 4 * 5 = 60\n",
+      "4 * 8 * 7 * 3 * 2 = 1344\n"
      ]
     }
    ],
    "source": [
     "def multiply_list(lst: list) -> int:\n",
-    "    # 여기에 코드를 작성하십시오\n",
-    "    pass\n",
+    "    result = 1         # result 변수를 초기값 1로 설정한다\n",
+    "    for num in lst:   # 리스트 lst의 각 숫자를 순회하며 result에 곱한다\n",
+    "        result *= num  \n",
+    "    return result     # 모든 숫자를 곱한 최종 결과를 반환한다\n",
     "\n",
     "# 아래는 검증 코드입니다.\n",
     "print(\"3 * 4 * 5 =\", multiply_list([3, 4, 5])) # 예상 출력 : 60\n",
@@ -217,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "a3a9e33d77106859",
    "metadata": {},
    "outputs": [
@@ -225,15 +218,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "None\n"
+      "{'She': 1, 'loves': 2, 'her': 1, 'cat,': 1, 'and': 1, 'the': 1, 'cat': 1, 'her.': 1}\n",
+      "{'The': 1, 'book': 2, 'is': 1, 'on': 1, 'the': 1, 'shelf.': 1}\n"
      ]
     }
    ],
    "source": [
     "def word_frequency(s: str) -> dict:\n",
-    "    pass\n",
-    "\n",
+    "    words = s.split() # 문자열을 공백으로 나누어 단어 리스트를 생성\n",
+    "    frequency = {} # 단어 빈도를 저장할 빈 딕셔너리를 생성\n",
+    "    \n",
+    "    #각 단어를 순회하며 빈도를 카운트\n",
+    "    for word in words:\n",
+    "            # 현재 단어의 빈도를 가져오고 없으면 0으로 시작\n",
+    "            if word in frequency:\n",
+    "                frequency[word] += 1\n",
+    "            else:\n",
+    "                frequency[word] = 1\n",
+    "    return frequency\n",
+    "    \n",
     "# 아래는 검증 코드입니다.\n",
     "print(word_frequency(\"She loves her cat, and the cat loves her.\")) \n",
     "# 예상 출력: {'she': 1, 'loves': 2, 'her': 2, 'cat,': 1, 'and': 1, 'the': 1, 'cat': 1}\n",
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "6d0805afc208214e",
    "metadata": {},
    "outputs": [
@@ -264,14 +267,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "None\n"
+      "12\n",
+      "11\n"
      ]
     }
    ],
    "source": [
     "def count_alphabet(s: str) -> int:\n",
-    "    pass\n",
+    "    text = s.lower() # 대소문자 구분없이 처리위한 소문자변환작업\n",
+    "    alpha = set() # 알파벳 문자 저장할 집합 생성\n",
+    "    \n",
+    "    # 문자열 순회해서 알파벳 문자만 집합에 추가하는 작업\n",
+    "    for char in text:\n",
+    "        if char.isalpha(): #문자가 알파벳인지 확인 .isalpha()\n",
+    "            alpha.add(char)\n",
+    "    \n",
+    "    # 집합의 크기를 반환( 유니크한 알파벳 문자 수)\n",
+    "    return len(alpha)\n",
+    "        \n",
     "\n",
     "# 아래는 검증 코드입니다.\n",
     "print(count_alphabet(\"She loves her cat, and the cat loves her.\")) # 예상 출력 : 12\n",
@@ -293,15 +306,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "826f2551f1902430",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1948-05-11 00:00:00\n",
+      "2002-09-26 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime, date, time, timedelta\n",
     "def after_1000_days(dt: date) -> date:\n",
-    "    pass\n",
-    "\n",
+    "    # date 객체를 datetime 객체로 변환 (시간은 00:00:00으로 설정)\n",
+    "    dt_datetime = datetime.combine(dt, datetime.min.time())\n",
+    "    \n",
+    "    # 1000일을 추가하기\n",
+    "    fut_datetime = dt_datetime + timedelta(days=1000)\n",
+    "    \n",
+    "    # 결과를 문자열 형식으로 반환\n",
+    "    return fut_datetime.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "\n",
     "# 아래는 검증 코드입니다.\n",
     "print(after_1000_days(date(1945, 8, 15)))\n",
@@ -323,14 +351,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5986bbf58dc2d03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".reh sevol tac eht dna ,tac reh sevol ehS\n",
+      ".flehs koob eht no si koob ehT\n"
+     ]
+    }
+   ],
    "source": [
     "def reverse_string(s: str) -> str:\n",
-    "    # 여기에 코드를 작성하십시오\n",
-    "    pass\n",
+    "    return s[::-1]  # 문자열을 뒤집어서 반환\n",
     "\n",
     "\n",
     "# 아래는 검증 코드입니다.\n",
@@ -357,26 +393,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "78b2d56c938ea14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r1 == r2 ? True\n",
+      "r1 != r2 ? False\n",
+      "r1 == r3 ? False\n",
+      "r1 != r3 ? True\n"
+     ]
+    }
+   ],
    "source": [
     "class Rectangle:\n",
     "    def __init__(self, width: int, height: int):\n",
     "        self.width = width\n",
     "        self.height = height\n",
     "\n",
-    "    def get_area(self):\n",
+    "    def get_area(self) -> int:\n",
     "        return self.width * self.height\n",
     "    \n",
-    "    def __eq__(self, other):\n",
-    "        # 여기에 코드를 작성하십시오\n",
-    "        pass\n",
-    "\n",
-    "    def __ne__(self, other):\n",
-    "        # 여기에 코드를 작성하십시오\n",
-    "        pass\n",
+    "    def __eq__(self, other) -> bool: #  동일한 넓이인지 확인\n",
+    "        if isinstance(other, Rectangle): # 비교 대상이 Rectangle 객체인지 확인\n",
+    "            return self.get_area() == other.get_area() # 넓이를 비교\n",
+    "        return False\n",
+    "    \n",
+    "    def __ne__(self, other) -> bool:\n",
+    "        return not self.__eq__(other) # __eq__ 의 반대를 반환\n",
     "    \n",
     "# 아래는 검증 코드입니다.\n",
     "r1 = Rectangle(3, 4)\n",
